--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "测试jenkins构建",
   "main": "index.js",
   "scripts": {
+    "remove":"rimraf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/realperson/jenkins-test/issues"
   },
-  "homepage": "https://github.com/realperson/jenkins-test#readme"
+  "homepage": "https://github.com/realperson/jenkins-test#readme",
+  "devDependencies": {
+    "cross-env": "^5.1.4",
+    "rimraf": "^2.6.2",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.4"
+  }
 }
