--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "jenkins-test",
   "version": "1.0.0",
   "description": "测试jenkins构建",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "remove": "rimraf dist",
+    "dev": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,7 +36,10 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.7.0",
-    "webpack-cli": "^2.1.2",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.10"
   }
 }
