--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "remove": "rimraf dist",
-    "dev": "webpack",
+    "dev": "webpack-dev-server --mode development --config webpack.config.js --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +29,7 @@
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.4",
     "rimraf": "^2.6.2",
